@@ -4,6 +4,10 @@ CHANGES
 0.8.2 (XX-XX-2014)
 ------------------
 
+- Make ProxyConnector.proxy immutable property.
+
+- Make UnixConnector.path immutable property.
+
 - Fix resource leak for aiohttp.request() with implicit connector.
 
 0.8.1 (06-18-2014)
